--- a/app/views/restaurants/show_with_reviews.html.erb
+++ b/app/views/restaurants/show_with_reviews.html.erb
@@ -1,6 +1,12 @@
 <h1><%= @restaurant.name %></h1>
 <br>
 <div>
+  <%= @restaurant.address %> |
+  <%= @restaurant.phone_number %> |
+  <%= @restaurant.category %>
+</div>
+<br>
+<div>
   <h2>Reviews</h2>
   <ul>
     <% @restaurant.reviews.each do |review| %>
