--- a/app/views/restaurants/show_new_review.html.erb
+++ b/app/views/restaurants/show_new_review.html.erb
@@ -19,9 +19,11 @@
 <br>
 <div>
   <h2>New review</h2>
-  <%= simple_form_for([@restaurant, @review]) do |f| %>
+  <div class="w-25">
+    <%= simple_form_for([@restaurant, @review]) do |f| %>
     <%= f.input :content %>
     <%= f.input :rating %>
     <%= f.submit "Submit review", class: "btn btn-primary" %>
-  <% end %>
+    <% end %>
+  </div>
 </div>
