--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -16,3 +16,14 @@
     <% end %>
   </ul>
 </div>
+<br>
+<div>
+  <h2>New review</h2>
+  <div class="w-25">
+    <%= simple_form_for([@restaurant, @review]) do |f| %>
+    <%= f.input :content %>
+    <%= f.input :rating %>
+    <%= f.submit "Submit review", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
